@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>556</width>
-    <height>476</height>
+    <height>502</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -42,23 +42,20 @@
       </item>
       <item row="0" column="0">
        <layout class="QGridLayout" name="gridLayout" columnstretch="0,1,0">
-        <item row="0" column="0">
-         <widget class="QLabel" name="uiFileLA">
-          <property name="text">
-           <string>&amp;User interface file:</string>
-          </property>
-          <property name="buddy">
-           <cstring>uiFileED</cstring>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="QLineEdit" name="uiFileED"/>
+        <item row="1" column="2">
+         <layout class="QHBoxLayout" name="horizontalLayout"/>
         </item>
         <item row="0" column="2">
          <widget class="QPushButton" name="uiFilePB">
           <property name="text">
            <string>Bro&amp;wse...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QComboBox" name="iconSetCO">
+          <property name="toolTip">
+           <string>The icon set to use. Warning: normal size of icons may be wrong until you save the preferences and restart LyX.</string>
           </property>
          </widget>
         </item>
@@ -72,15 +69,38 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QComboBox" name="iconSetCO">
-          <property name="toolTip">
-           <string>The icon set to use. Warning: normal size of icons may be wrong until you save the preferences and restart LyX.</string>
+        <item row="0" column="0">
+         <widget class="QLabel" name="uiFileLA">
+          <property name="text">
+           <string>&amp;User interface file:</string>
+          </property>
+          <property name="buddy">
+           <cstring>uiFileED</cstring>
           </property>
          </widget>
         </item>
-        <item row="1" column="2">
-         <layout class="QHBoxLayout" name="horizontalLayout"/>
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="uiFileED"/>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="uiStyleLA">
+          <property name="text">
+           <string>User interface &amp;style:</string>
+          </property>
+          <property name="buddy">
+           <cstring>uiStyleCO</cstring>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QComboBox" name="uiStyleCO">
+          <property name="toolTip">
+           <string>Only certain styles may support dark mode, e.g. fusion on Windows</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="2">
+         <layout class="QHBoxLayout" name="horizontalLayout_2"/>
         </item>
        </layout>
       </item>
